@@ -29,12 +29,14 @@ import javax.swing.JScrollPane;
 import javax.swing.JTabbedPane;
 
 import static org.jsampler.view.fantasia.FantasiaI18n.i18n;
+import static org.jsampler.view.fantasia.FantasiaPrefs.preferences;
 
 /**
  *
  * @author Grigor Iliev
  */
 public class SidePane extends PixmapPane {
+	JTabbedPane tabbedPane = new JTabbedPane();
 	private final OrchestrasPane orchestraPane = new OrchestrasPane();
 	private final MidiInstrumentsPane midiInstrumentsPane = new MidiInstrumentsPane();
 	
@@ -45,18 +47,21 @@ public class SidePane extends PixmapPane {
 		setOpaque(false);
 		setPixmapInsets(new java.awt.Insets(6, 6, 6, 6));
 		setLayout(new BorderLayout());
-		JTabbedPane tp = new JTabbedPane();
+		JTabbedPane tp = tabbedPane;
 		tp.addTab(i18n.getLabel("SidePane.tabOrchestras"), orchestraPane);
 		tp.addTab(i18n.getLabel("SidePane.tabMidiInstruments"), midiInstrumentsPane);
 		add(tp);
 		setBorder(BorderFactory.createEmptyBorder(6, 6, 6, 6));
 		
-		
+		int i = preferences().getIntProperty("SidePane.tabIndex", 0);
+		if(tp.getTabCount() > i) tp.setSelectedIndex(i);
 	}
 	
 	public void
 	savePreferences() {
 		orchestraPane.savePreferences();
 		midiInstrumentsPane.savePreferences();
+		int i = tabbedPane.getSelectedIndex();
+		if(i != -1) preferences().setIntProperty("SidePane.tabIndex", i);
 	}
 }
